# DiscordChatImporter

./: .gitignore  LICENSE  Makefile  README.md  channel_history.json  hi.ipynb  history.json  main.py  pyproject.toml  requirements.txt  settings.json
.github/workflows/: docker-image.yml
cogs/: admin.py  importer.py
core/: __init__.py  bot.py  messages.py
format_json/: authors.csv  authors_to_links.csv  avatar_path_to_link.py  avatar_path_to_png.py  copy_avatars_with_author_name.py  generate_test_json.py  image_upload_history.csv  parse_html_to_json.py  upload_avatars_to_imgur.py
